Fixed table, some mqtt improvements